use path feature compatible with java 8